--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-next": "^1.4.0",
     "faker": "^6.6.6",
     "nanoid": "^5.0.6",
+    "next": "^14.1.3",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
