--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-train",
   "version": "0.1.0",
   "homepage": "https://Kuldik.github.io/typescript-train",
-  "private": true,
+  "publick": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
